objects/Property1__c.object
<CustomObject>
    <fields>
        <fullName>Assessed_Value__c</fullName>
        <label>Assessed Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pre-Market</fullName>
                </value>
                <value>
                    <fullName>Listed</fullName>
                </value>
                <value>
                    <fullName>Under Contract</fullName>
                </value>
                <value>
                    <fullName>Sold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Property1</label>
    <nameField>
        <label>Property Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Properties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Top_Listings</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <label>Top Listings</label>
    </listViews>
</CustomObject>